--- a/RawBencher/App.config
+++ b/RawBencher/App.config
@@ -2,24 +2,31 @@
 <configuration>
 	<configSections>
 		<!-- If you want to connect to a AdventureWorks catalog with a different name than 'AdventureWorks', uncomment the line below -->
-		<!--<section name="sqlServerCatalogNameOverwrites" type="System.Configuration.NameValueSectionHandler" />-->
-
+		<!--
+		<section name="sqlServerCatalogNameOverwrites" type="System.Configuration.NameValueSectionHandler" />
+		-->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-		
-	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+
+		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+	</configSections>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
 	</startup>
 	<!-- If you want to connect to a AdventureWorks catalog with a different name than 'AdventureWorks', uncomment the 3 lines below and fill in your catalog name-->
-	<!--<sqlServerCatalogNameOverwrites>
+	<!--
+	<sqlServerCatalogNameOverwrites>
 		<add key="AdventureWorks" value="YourAdventureWorksName" />
-	</sqlServerCatalogNameOverwrites>-->
+	</sqlServerCatalogNameOverwrites>
+	-->
 	<connectionStrings>
-		<!-- please adjust the connection string embedded in the element below to target the proper catalog / server using the proper user / password combination -->
-		<!-- If you use a differently named adventure works database, be sure to change the initial catalog descriptions in the connection strings below.-->
-    <add name="AdventureWorksConnectionTelerikDomain" connectionString="data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient" />
-    <add name="AdventureWorksConnectionTelerikFluent" connectionString="data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient" />
-    <add name="AdventureWorks.ConnectionString.SQL Server (SqlClient)" connectionString="data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" />
+		<!--
+			 Please adjust the connection string embedded in the element below to target the proper catalog / server using the proper user / password combination
+			 If you use a differently named adventure works database, be sure to change the initial catalog descriptions in the connection strings below.
+			 The extra connection string for telerik Fluent is required as the OpenAccess runtime used in the other telerik bencher caches metadata 
+			 related to the connection string so the fluent one will crash if it doesn't use its own connection string. 
+		-->
+		<add name="AdventureWorksConnectionTelerikFluent" connectionString="data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient" />
+		<add name="AdventureWorks.ConnectionString.SQL Server (SqlClient)" connectionString="data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient" />
 		<add name="EF.ConnectionString.SQL Server (SqlClient)" connectionString="metadata=res://*/AW.csdl|res://*/AW.ssdl|res://*/AW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<entityFramework>
