--- a/NH/DAL/Model/NH.Bencher.Model.csproj
+++ b/NH/DAL/Model/NH.Bencher.Model.csproj
@@ -38,6 +38,9 @@
       <Private>True</Private>
       <HintPath>..\..\..\packages\Microsoft.SqlServer.Types.11.0.0\lib\net20\Microsoft.SqlServer.Types.dll</HintPath>
     </Reference>
+    <Reference Include="NHibernate">
+      <HintPath>..\..\..\packages\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
