--- a/NH/DAL/Model/packages.config
+++ b/NH/DAL/Model/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Types" version="11.0.0" targetFramework="net45" />
+  <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
 </packages>
