--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -3,6 +3,7 @@
   <package id="Dapper" version="1.42" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net451" />
+  <package id="linq2db" version="1.0.7.3" targetFramework="net451" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net451" />
   <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="4.2.20151023" targetFramework="net451" />
   <package id="ServiceStack.Common" version="4.0.46" targetFramework="net451" />
