--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -2,12 +2,36 @@
 <packages>
   <package id="Dapper" version="1.42" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="EntityFramework.Commands" version="7.0.0-rc1-final" targetFramework="net451" />
+  <package id="EntityFramework.Core" version="7.0.0-rc1-final" targetFramework="net451" />
+  <package id="EntityFramework.MicrosoftSqlServer" version="7.0.0-rc1-final" targetFramework="net451" />
+  <package id="EntityFramework.MicrosoftSqlServer.Design" version="7.0.0-rc1-final" targetFramework="net451" />
+  <package id="EntityFramework.Relational" version="7.0.0-rc1-final" targetFramework="net451" />
+  <package id="EntityFramework.Relational.Design" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net451" />
+  <package id="Ix-Async" version="1.2.5" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Configuration" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Logging" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.OptionsModel" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Primitives" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net451" />
+  <package id="Remotion.Linq" version="2.0.1" targetFramework="net451" />
   <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="4.2.20151023" targetFramework="net451" />
   <package id="ServiceStack.Common" version="4.0.46" targetFramework="net451" />
   <package id="ServiceStack.Interfaces" version="4.0.46" targetFramework="net451" />
   <package id="ServiceStack.OrmLite" version="4.0.46" targetFramework="net451" />
   <package id="ServiceStack.OrmLite.SqlServer" version="4.0.46" targetFramework="net451" />
   <package id="ServiceStack.Text" version="4.0.46" targetFramework="net451" />
+  <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net451" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0-beta-23516" targetFramework="net451" />
+  <package id="System.Diagnostics.Tracing" version="4.0.0" targetFramework="net451" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net451" />
+  <package id="System.Threading" version="4.0.0" targetFramework="net451" />
 </packages>
